# cursor-subagent-mcp

./: .gitignore  LICENSE  README.md  agents.yaml  cursor-subagent-mcp.code-workspace  deps_install.md  pyproject.toml
agents-master/: 01_orchestrator.md  02_analyst_prompt.md  03_tz_reviewer_prompt.md  04_architect_prompt.md  05_architecture_reviewer_prompt.md  06_agent_planner.md  07_agent_plan_reviewer.md  08_agent_developer.md  09_agent_code_reviewer.md  10_executor_agent.md  orchestrator.md
agents-master/default_agents/: analyst.md  architect.md  architecture_reviewer.md  code_reviewer.md  developer.md  executor.md  plan_reviewer.md  planner.md  tz_reviewer.md
src/cursor_subagent_mcp/: __init__.py  config.py  executor.py  server.py
src/cursor_subagent_mcp/executor/: __init__.py  cli.py  installer.py  logging.py  models.py  runner.py  shell.py  utils.py
src/cursor_subagent_mcp/tools/: __init__.py  create_agent.py  invoke.py  orchestration.py  setup.py  status.py
subagent_output/: technical_specification.md  tz_review.md
tests/: conftest.py  test_config.py  test_conftest.py  test_executor_cli.py  test_executor_installer.py  test_executor_logging.py  test_executor_models.py  test_executor_runner.py  test_executor_shell.py  test_executor_utils.py  test_imports.py  test_init_package.py  test_mcp_compatibility.py  test_server.py  test_tools_invoke.py  test_tools_orchestration.py  test_tools_setup.py  test_tools_status.py
